# IPS_solution_predictive_maintenance

./: .gitignore  README.md  app.py  pyproject.toml  pytest.py  requirements.txt  test_train_model.py  train_model.py
artifacts/: lr_model.joblib  mm_scaler.joblib  preprocessor.joblib  rf_model.joblib  xgb_model.joblib
ips_streamlit/: pyproject.toml
ips_streamlit/ips_streamlit/: app.py
ips_train/: README.md  pyproject.toml
ips_train/ips_train/: cli.py  data.py  mlflow.py  preprocessing.py  train_model.py
ips_train/src/ips_train/: preprocessing.py
ips_train/tests/: cli_test.py  preprocessing_test.py  pytest.py  train_model_test.py
