[project]
name = "ips-streamlit"
version = "0.1.0"
description = "Webapp package for IPS"
authors = [
    {name = "Mila"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib",
    "numpy",
    "pandas",
    "scikit-learn",
    "streamlit",
    "xgboost",
    "plotly",
    "ips_train @ git+https://github.com/mila151107/IPS_solution_predictive_maintenance.git#subdirectory=ips_train",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
