[project]
name = "ips-train"
version = "0.1.0"
description = "Training package for IPS"
authors = [
    {name = "Mila"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib",
    "numpy",
    "pandas",
    "scikit-learn",
    "lightgbm",
    "click (>=8.4.1,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

# Format code with:
# poetry run black .
[tool.black]
line-length = 120
target-version = ['py314']
